fix:fix elements spacing

--- a/practice-two/src/styles/layout/footer.css
+++ b/practice-two/src/styles/layout/footer.css
@@ -157,7 +157,7 @@
 
 @media (min-width: 1440px) {
   .footer-wrapper {
-    margin-top: 118px;
+    margin-top: 117px;
     padding-bottom: 144px;
     gap: 30.6px;
   }
