--- a/practice-two/src/styles/pages/comments.css
+++ b/practice-two/src/styles/pages/comments.css
@@ -80,7 +80,7 @@
   }
 
   .comments-detail {
-    margin-top: 77px;
+    margin-top: 73px;
     flex-direction: row;
     gap: 28.8px;
   }
